pkg/cmd/kurel/testdata/httproute-filters-urlrewrite/expected.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: api
    launcher.gokure.dev/component: api
  name: api
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  strategy: {}
  template:
    metadata:
      labels:
        app: api
        launcher.gokure.dev/component: api
    spec:
      containers:
      - image: myorg/api:v2.1.0
        name: api
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        resources:
          limits:
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 128Mi
      serviceAccountName: api
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api
    launcher.gokure.dev/component: api
  name: api
  namespace: default
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: api
  type: ClusterIP
---
apiVersion: v1
automountServiceAccountToken: false
kind: ServiceAccount
metadata:
  labels:
    app: api
    launcher.gokure.dev/component: api
  name: api
  namespace: default
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app: api
    launcher.gokure.dev/component: api
  name: api-httproute
  namespace: default
spec:
  hostnames:
  - api.example.com
  parentRefs:
  - name: public-gateway
  rules:
  - backendRefs:
    - name: api
      port: 80
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          replacePrefixMatch: /v2
          type: ReplacePrefixMatch
    matches:
    - path:
        type: PathPrefix
        value: /v1
